--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 authors = ["Baptiste Esteban <baptiste.esteban.27@gmail.com>"]
 repository = "https://github.com/baptisteesteban/olympus"
 readme = "README.md"
-license = "MPL2"
 license-file = "LICENSE.md"
 keywords = [
     "image processing"
@@ -14,3 +13,4 @@ keywords = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image="0.24.7"
