--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,22 @@
 [package]
-name = "olympus"
-version = "0.1.0"
-edition = "2021"
 authors = ["Baptiste Esteban <baptiste.esteban.27@gmail.com>"]
-repository = "https://github.com/baptisteesteban/olympus"
-readme = "README.md"
-license-file = "LICENSE.md"
+edition = "2021"
 keywords = [
-    "image processing"
+  "image processing",
 ]
+license-file = "LICENSE.md"
+name = "olympus"
+readme = "README.md"
+repository = "https://github.com/baptisteesteban/olympus"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image="0.24.7"
+image = "0.24.7"
 num = "0.4.1"
+
+[workspace]
+members = [
+  "./apps/cli",
+]
