Divide sources and tests + fix coverage

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,8 @@
             "args": [
                 "llvm-cov",
                 "--lcov",
+                "--ignore-filename-regex",
+                "tests",
                 "--output-path",
                 "${workspaceFolder}/lcov.info"
             ],
