--- a/apps/tos/Cargo.toml
+++ b/apps/tos/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "olympys-tos"
+name = "olympus-tos"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
