--- a/apps/tos/Cargo.toml
+++ b/apps/tos/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version = "4.5.0", "features" = ["derive"]}
 num = "0.4.1"
 olympus = {path = "../.."}
 svg = "0.16.0"
